--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 baseurl:
 url: https://zzgdream.github.io
 date_format: "ordinal"
-title: zxallen's-blog
-subtitle: "会敲代码的令狐葱"
-description: "Zxallen的个人博客"
+title: zzgdream's-blog
+subtitle: "敲着代码看世界散人"
+description: "zzgdream的个人博客"
 keywords: zzgdream,linghucong,Python,Spider,Django,Flask
 timezone: Asia/Shanghai
 encoding: "utf-8"
